Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "temperature = 85\n",
     "is_it_hot = None\n",
-    "i\n",
+    "if temparature\n",
     "# conditionals go here"
    ]
   },
