Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -54,7 +54,8 @@
    "source": [
     "temperature = 85\n",
     "is_it_hot = None\n",
-    "if temparature >\n",
+    "if temparature >80:\n",
+    "    is_it_\n",
     "# conditionals go here"
    ]
   },
