Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,7 @@
     "temperature = 85\n",
     "is_it_hot = None\n",
     "if temparature >80:\n",
-    "    is_it_\n",
+    "    is_it_hot = \"I \"\n",
     "# conditionals go here"
    ]
   },
