--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,7 @@
     "temperature = 85\n",
     "is_it_hot = None\n",
     "if temparature >80:\n",
-    "    is_it_hot = \"I \"\n",
+    "    is_it_hot = \"It is so hot out\"\n",
     "# conditionals go here"
    ]
   },
