--- a/index.ipynb
+++ b/index.ipynb
@@ -56,7 +56,8 @@
     "is_it_hot = None\n",
     "if temparature >80:\n",
     "    is_it_hot = \"It is so hot out!\"\n",
-    "elif \n",
+    "else:\n",
+    "    is_it\n",
     "# conditionals go here"
    ]
   },
