--- a/index.ipynb
+++ b/index.ipynb
@@ -57,7 +57,7 @@
     "if temparature >80:\n",
     "    is_it_hot = \"It is so hot out!\"\n",
     "else:\n",
-    "    is_it\n",
+    "    is_it_hot\n",
     "# conditionals go here"
    ]
   },
