Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -48,9 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It is so hot out!\n"
+     ]
+    }
+   ],
    "source": [
     "temperature = 85\n",
     "is_it_hot = None\n",
@@ -59,6 +67,7 @@
     "    print(is_it_hot)\n",
     "else:\n",
     "    is_it_hot = \"This is nothing! Bring on the heat.\"\n",
+    "    print(is_it_hot)\n",
     "# conditionals go here"
    ]
   },
