--- a/index.ipynb
+++ b/index.ipynb
@@ -106,7 +106,7 @@
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
     "ends_with = None\n",
-    "if \n",
+    "if string.endswith(sub_string)\n",
     "# conditionals go here"
    ]
   },
