--- a/index.ipynb
+++ b/index.ipynb
@@ -99,14 +99,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
     "ends_with = None\n",
-    "if string.endswith(sub_string)\n",
+    "if string.endswith(sub_string):\n",
+    "    True\n",
+    "else:\n",
+    "    False\n",
     "# conditionals go here"
    ]
   },
